--- a/templates/home.html
+++ b/templates/home.html
@@ -2,50 +2,30 @@
 <html lang="en">
   <head>
     <title>Opare Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(50, 50, 50);
-        text-align: center;
-      }
-
-      #banner {
-        width: 100%;
+      #banner{
         height: 360px;
+        width: 100%;
         object-fit: cover;
-      }
 
-      h2 {
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(100, 100, 100);
-        text-align: center;
-        font-weight: normal;
-      }
-
-      .bodytext {
-        font-family: Roboto;
-        color: rgb(80, 80, 80);
-      }
-
-      #container {
-        max-width: 720px;
-        margin: 0 auto;
       }
     </style>
   </head>
   <body>
-    <div id="container">
-      <h1>Opare Careers</h1>
-      <img
+  </head>
+  <body>
+    <div class="container">
+      <h1 class="text-center mt-2 mb-4">Opare Careers</h1>
+      <img class="img-fluid"
         id="banner"
         src="http://127.0.0.1:5000/static/banner.jpg"
         height="320"
       />
-      <h2>About Opare</h2>
-      <p class="bodytext">
+      <h2 class="text-center mt-2 mb-4">About Opare</h2>
+      <p class="lead">
         Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
         tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
         veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
@@ -54,11 +34,11 @@
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim id est laborum.
       </p>
-      <h2>Open Positions</h2>
-      <p class="bodytext">TODO - Show the jobs here</p>
-      <div style="text-align: center">
-        <button>Contact Us</button>
-        <p>Copyright 2023, Opare</p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <p>TODO - Show the jobs here</p>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contact Us</button>
+        <p class="mt-4">Copyright 2023, Opare</p>
       </div>
     </div>
   </body>
