--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center mt-2 mb-4">Opare Careers</h1>
+      <h1 class="text-center mt-2 mb-4"> {{company_name}} Careers</h1>
       <img class="img-fluid"
         id="banner"
         src="http://127.0.0.1:5000/static/banner.jpg"
@@ -35,7 +35,11 @@
         mollit anim id est laborum.
       </p>
       <h2 class="text-center mt-2 mb-4">Open Positions</h2>
-      <p>TODO - Show the jobs here</p>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
       <div class="text-center">
         <button class="btn btn-primary btn-lg">Contact Us</button>
         <p class="mt-4">Copyright 2023, Opare</p>
